third_party/move/move-compiler-v2/tests/checking/typing/constant_inference.exp

Diagnostics:
error: cannot use `u8` with an operator which expects a value of type `u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/constant_inference.move:19:27
   │
19 │         let error = 257 + r; // Should error
   │                           ^
